objects/Case_FeedPost_Log__c.object
<CustomObject>
    <description>This object is used for email notifications when a new Case Post is created or updated. The SFDC objects FeedItem or CaseFeed cannot be extended - this object is a workaround.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Case__r.End_User_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Contact_Alt_Email__c</fullName>
        <label>Case Contact Alt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Contact_Email__c</fullName>
        <label>Case Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Contact_First_Name__c</fullName>
        <formula>Case__r.Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <formula>Text(Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Thread_Id__c</fullName>
        <formula>&quot;ref:_&quot;&amp;LEFT($Organization.Id,5)&amp;SUBSTITUTE(RIGHT($Organization.Id,10),&quot;0&quot;,&quot;&quot;)&amp;&quot;._&quot;&amp;LEFT(Case__r.Id,5)&amp;SUBSTITUTE(LEFT(RIGHT(Case__r.Id,10),5),&quot;0&quot;,&quot;&quot;)&amp;RIGHT(Case__r.Id,5)&amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case_FeedPost_Log</relationshipLabel>
        <relationshipName>Case_FeedPost_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Displays Created Date in Date/Time format</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_EmailAddr_10__c</fullName>
        <label>External EmailAddr 10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_EmailAddr_1__c</fullName>
        <label>External EmailAddr 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_EmailAddr_2__c</fullName>
        <label>External EmailAddr 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FeedPost_ID__c</fullName>
        <label>FeedPost ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeedPost__c</fullName>
        <label>FeedPost</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_EmailAddr_10__c</fullName>
        <label>Internal EmailAddr 10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_EmailAddr_1__c</fullName>
        <label>Internal EmailAddr 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_EmailAddr_2__c</fullName>
        <label>Internal EmailAddr 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>isAutoFollowUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAutoFollowUp</label>
        <type>Checkbox</type>
    </fields>
    <label>Case FeedPost Log</label>
    <nameField>
        <displayFormat>CF-{00000000}</displayFormat>
        <label>Case_FeedPost_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case_FeedPost_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>